# email-reports

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: daily-digest.yml
src/: __init__.py  main.py  run_digest.py  scheduler.py
src/api/: auth.py  routes.py  schemas.py
src/core/: config.py  database.py
src/models/: __init__.py  digest.py  topic.py  user.py
src/services/: __init__.py  digest.py  email.py  gist_history.py  nba_stats.py  news.py  scraper.py  sec_filings.py  summarizer.py
src/templates/: brief_email.html  brief_email.txt  digest_email.html  digest_email.txt  welcome_email.html
tests/: __init__.py
